--- a/ConsoleApplication5/Next_Game.csproj
+++ b/ConsoleApplication5/Next_Game.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Game.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Cartographic\Route.cs" />
+    <Compile Include="Snippet.cs" />
     <Compile Include="World.cs" />
   </ItemGroup>
   <ItemGroup>
