--- a/ConsoleApplication5/Next_Game.csproj
+++ b/ConsoleApplication5/Next_Game.csproj
@@ -72,18 +72,19 @@
   <ItemGroup>
     <Compile Include="Character.cs" />
     <Compile Include="Archive.cs" />
+    <Compile Include="House.cs" />
     <Compile Include="History.cs" />
-    <Compile Include="InfoChannel.cs" />
+    <Compile Include="System\InfoChannel.cs" />
     <Compile Include="Cartographic\Location.cs" />
     <Compile Include="Cartographic\Map.cs" />
-    <Compile Include="Menu.cs" />
+    <Compile Include="System\Menu.cs" />
     <Compile Include="Cartographic\Move.cs" />
     <Compile Include="Cartographic\Network.cs" />
-    <Compile Include="MessageLog.cs" />
+    <Compile Include="System\MessageLog.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Cartographic\Route.cs" />
-    <Compile Include="Snippet.cs" />
+    <Compile Include="System\Snippet.cs" />
     <Compile Include="World.cs" />
   </ItemGroup>
   <ItemGroup>
