--- a/ConsoleApplication5/Next_Game.csproj
+++ b/ConsoleApplication5/Next_Game.csproj
@@ -72,7 +72,7 @@
   <ItemGroup>
     <Compile Include="Actor.cs" />
     <Compile Include="Archive.cs" />
-    <Compile Include="HistLog.cs" />
+    <Compile Include="Record.cs" />
     <Compile Include="House.cs" />
     <Compile Include="History.cs" />
     <Compile Include="System\InfoChannel.cs" />
