--- a/ConsoleApplication5/Next_Game.csproj
+++ b/ConsoleApplication5/Next_Game.csproj
@@ -72,6 +72,7 @@
   <ItemGroup>
     <Compile Include="Actor.cs" />
     <Compile Include="Archive.cs" />
+    <Compile Include="Cartographic\GeoCluster.cs" />
     <Compile Include="Record.cs" />
     <Compile Include="House.cs" />
     <Compile Include="History.cs" />
