--- a/ConsoleApplication5/Next_Game.csproj
+++ b/ConsoleApplication5/Next_Game.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Actor.cs" />
     <Compile Include="Archive.cs" />
     <Compile Include="Cartographic\GeoCluster.cs" />
+    <Compile Include="FileImport.cs" />
     <Compile Include="Constant.cs" />
     <Compile Include="Trait.cs" />
     <Compile Include="Record.cs" />
