Major house initialisation hived off to a separate history.cs method to keep InitialiseHistory as lean and clean as possible. Tested and all o.K

--- a/ConsoleApplication5/Next_Game.csproj
+++ b/ConsoleApplication5/Next_Game.csproj
@@ -73,10 +73,10 @@
     <Compile Include="Actor.cs" />
     <Compile Include="Archive.cs" />
     <Compile Include="Cartographic\GeoCluster.cs" />
-    <Compile Include="FileImport.cs" />
-    <Compile Include="Constant.cs" />
+    <Compile Include="System\FileImport.cs" />
+    <Compile Include="System\Constant.cs" />
     <Compile Include="Trait.cs" />
-    <Compile Include="Record.cs" />
+    <Compile Include="System\Record.cs" />
     <Compile Include="House.cs" />
     <Compile Include="History.cs" />
     <Compile Include="System\Color.cs" />
