--- a/ConsoleApplication5/Next_Game.csproj
+++ b/ConsoleApplication5/Next_Game.csproj
@@ -73,12 +73,13 @@
     <Compile Include="Actor.cs" />
     <Compile Include="Archive.cs" />
     <Compile Include="Cartographic\GeoCluster.cs" />
+    <Compile Include="Secret.cs" />
     <Compile Include="System\FileImport.cs" />
     <Compile Include="System\Constant.cs" />
-    <Compile Include="Trait.cs" />
+    <Compile Include="Static Classes\Trait.cs" />
     <Compile Include="System\Record.cs" />
     <Compile Include="House.cs" />
-    <Compile Include="History.cs" />
+    <Compile Include="Static Classes\History.cs" />
     <Compile Include="System\Color.cs" />
     <Compile Include="System\InfoChannel.cs" />
     <Compile Include="Cartographic\Location.cs" />
@@ -87,11 +88,11 @@
     <Compile Include="Cartographic\Move.cs" />
     <Compile Include="Cartographic\Network.cs" />
     <Compile Include="System\MessageLog.cs" />
-    <Compile Include="Game.cs" />
+    <Compile Include="Static Classes\Game.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Cartographic\Route.cs" />
     <Compile Include="System\Snippet.cs" />
-    <Compile Include="World.cs" />
+    <Compile Include="Static Classes\World.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
