--- a/ConsoleApplication5/Next_Game.csproj
+++ b/ConsoleApplication5/Next_Game.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Game World\Secret.cs" />
     <Compile Include="Static Classes\Lore.cs" />
     <Compile Include="System\Box.cs" />
+    <Compile Include="System\Utility.cs" />
     <Compile Include="System\Error.cs" />
     <Compile Include="System\FileImport.cs" />
     <Compile Include="System\Constant.cs" />
