history SetInfluence replaces SetWifeInfluence and wives now can have a negative influence on wits. Working.

--- a/ConsoleApplication5/Next_Game.csproj
+++ b/ConsoleApplication5/Next_Game.csproj
@@ -78,17 +78,17 @@
     <Compile Include="System\Box.cs" />
     <Compile Include="System\Utility.cs" />
     <Compile Include="System\Error.cs" />
-    <Compile Include="System\FileImport.cs" />
-    <Compile Include="System\Constant.cs" />
-    <Compile Include="Static Classes\Trait.cs" />
+    <Compile Include="Static Classes\FileImport.cs" />
+    <Compile Include="Static Classes\Constant.cs" />
+    <Compile Include="System\Trait.cs" />
     <Compile Include="System\Record.cs" />
     <Compile Include="Game World\House.cs" />
     <Compile Include="Static Classes\History.cs" />
     <Compile Include="System\Color.cs" />
-    <Compile Include="System\InfoChannel.cs" />
+    <Compile Include="Static Classes\InfoChannel.cs" />
     <Compile Include="Cartographic\Location.cs" />
     <Compile Include="Cartographic\Map.cs" />
-    <Compile Include="System\Menu.cs" />
+    <Compile Include="Static Classes\Menu.cs" />
     <Compile Include="Cartographic\Move.cs" />
     <Compile Include="Cartographic\Network.cs" />
     <Compile Include="System\MessageLog.cs" />
