--- a/ConsoleApplication5/Next_Game.csproj
+++ b/ConsoleApplication5/Next_Game.csproj
@@ -71,7 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Game World\Actor.cs" />
-    <Compile Include="Archive.cs" />
+    <Compile Include="Archive\Archive.cs" />
     <Compile Include="Cartographic\GeoCluster.cs" />
     <Compile Include="Game World\Secret.cs" />
     <Compile Include="Static Classes\Lore.cs" />
@@ -91,7 +91,7 @@
     <Compile Include="Static Classes\Menu.cs" />
     <Compile Include="Cartographic\Move.cs" />
     <Compile Include="Cartographic\Network.cs" />
-    <Compile Include="System\MessageLog.cs" />
+    <Compile Include="Archive\MessageLog.cs" />
     <Compile Include="Static Classes\Game.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Cartographic\Route.cs" />
