--- a/ConsoleApplication5/Next_Game.csproj
+++ b/ConsoleApplication5/Next_Game.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Game World\Actor.cs" />
     <Compile Include="Archive\Archive.cs" />
     <Compile Include="Cartographic\GeoCluster.cs" />
+    <Compile Include="Game World\Event.cs" />
     <Compile Include="Game World\Secret.cs" />
     <Compile Include="Static Classes\Lore.cs" />
     <Compile Include="System\Box.cs" />
