--- a/ConsoleApplication5/Next_Game.csproj
+++ b/ConsoleApplication5/Next_Game.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Cartographic\GeoCluster.cs" />
     <Compile Include="Game World\Event.cs" />
     <Compile Include="Game World\Secret.cs" />
+    <Compile Include="Static Classes\Story.cs" />
     <Compile Include="Static Classes\Lore.cs" />
     <Compile Include="System\Box.cs" />
     <Compile Include="System\Utility.cs" />
