Option.cs and Event.cs framework in place. Event.Active replaced with Event.Status

--- a/ConsoleApplication5/Next_Game.csproj
+++ b/ConsoleApplication5/Next_Game.csproj
@@ -70,12 +70,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Event_System\Outcome.cs" />
+    <Compile Include="Event_System\Option.cs" />
     <Compile Include="Game World\Actor.cs" />
     <Compile Include="Archive\Archive.cs" />
     <Compile Include="Cartographic\GeoCluster.cs" />
     <Compile Include="Game World\Archetype.cs" />
-    <Compile Include="Game World\Story.cs" />
-    <Compile Include="Game World\Event.cs" />
+    <Compile Include="Event_System\Story.cs" />
+    <Compile Include="Event_System\Event.cs" />
     <Compile Include="Game World\Secret.cs" />
     <Compile Include="Static Classes\Director.cs" />
     <Compile Include="Static Classes\Lore.cs" />
