Implementing Challenges.cs and filling data in Challenges.txt.

--- a/ConsoleApplication5/Next_Game.csproj
+++ b/ConsoleApplication5/Next_Game.csproj
@@ -71,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Event_System\Card.cs" />
+    <Compile Include="Event_System\Challenge.cs" />
     <Compile Include="Event_System\Result.cs" />
     <Compile Include="Event_System\Situation.cs" />
     <Compile Include="Static Classes\Conflict.cs" />
