--- a/ConsoleApplication5/Next_Game.csproj
+++ b/ConsoleApplication5/Next_Game.csproj
@@ -85,7 +85,7 @@
     <Compile Include="Game World\Archetype.cs" />
     <Compile Include="Event_System\Story.cs" />
     <Compile Include="Event_System\Event.cs" />
-    <Compile Include="Game World\Secret.cs" />
+    <Compile Include="Game World\Possession.cs" />
     <Compile Include="Static Classes\Director.cs" />
     <Compile Include="Static Classes\Lore.cs" />
     <Compile Include="System\Box.cs" />
