--- a/ConsoleApplication5/Next_Game.csproj
+++ b/ConsoleApplication5/Next_Game.csproj
@@ -91,7 +91,7 @@
     <Compile Include="Static Classes\Lore.cs" />
     <Compile Include="System\Box.cs" />
     <Compile Include="Static Classes\Layout.cs" />
-    <Compile Include="System\CustomExceptions.cs" />
+    <Compile Include="System\BloodHound.cs" />
     <Compile Include="System\Utility.cs" />
     <Compile Include="System\Error.cs" />
     <Compile Include="Static Classes\FileImport.cs" />
