Statistic.cs added and working.

--- a/ConsoleApplication5/Next_Game.csproj
+++ b/ConsoleApplication5/Next_Game.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Event_System\Result.cs" />
     <Compile Include="Event_System\Situation.cs" />
     <Compile Include="Game World\Condition.cs" />
+    <Compile Include="Static Classes\Statistic.cs" />
     <Compile Include="Static Classes\Variable.cs" />
     <Compile Include="Static Classes\Conflict.cs" />
     <Compile Include="Event_System\Trigger.cs" />
